resources/webidl2/test/invalid/baseline/unknown-generic.txt
Syntax error at line 2, since `interface FetchEvent`:
  ResponsePromise<any> default(
                 ^ Unsupported generic type ResponsePromise
